--- a/connectMySql/package.json
+++ b/connectMySql/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "axios": "^1.8.1"
+    "axios": "^1.8.1",
+    "mysql": "^2.18.1"
   }
 }
